--- a/index.html
+++ b/index.html
@@ -1,26 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign In - F1Force</title>
-    <link href="./storage/img/fav-icon-signup.svg" rel="icon">
-    <link rel="stylesheet" href="./styles/styles.css">
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sign In - F1Force</title>
+  <link href="./storage/img/fav-icon-signup.svg" rel="icon">
+  <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-    <div class="container">
-        <!--<img src="./storage/img/fondo-signup.gif" alt=""> -->
+  <div class="container">
+    <div class="login">
+      
+      <div class="login--img"></div>
 
-        <div class="login">
-            <div class="login--img">
-            </div>
-            <div class="login--info">
-            </div>
+      <div class="login--info">
+        <div class="login--nav">
+          <a href="#">Sign Up</a>
+          <a href="#" class="active">Sign In</a>
+          <a href="#">Admin</a>
         </div>
+
+        <form class="login--form">
+          <label for="email">E-mail</label>
+          <input type="email" id="email" placeholder="example@mail.com">
+          
+          <label for="password">Password</label>
+          <input type="password" id="password" placeholder="••••••••">
+
+          <div class="login--forgot">
+            <a href="#">Olvidé mi contraseña</a>
+          </div>
+
+          <button class="login--button">Sign Up</button>
+        </form>
+      </div>
+
     </div>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+  </div>
 </body>
 </html>
