--- a/index.html
+++ b/index.html
@@ -10,14 +10,11 @@
 <body>
   <div class="container">
     <div class="login">
-      
       <div class="login--img"></div>
-
       <div class="login--info">
         <div class="login--nav">
-          <a href="#">Sign Up</a>
-          <a href="#" class="active">Sign In</a>
-          <a href="#">Admin</a>
+          <a href="./index.html" class="active">Sign In</a>
+          <a href="./login-admin/index.html">Admin</a>
         </div>
 
         <form class="login--form">
@@ -31,7 +28,7 @@
             <a href="#">Olvidé mi contraseña</a>
           </div>
 
-          <button class="login--button">Sign Up</button>
+          <button class="login--button" id="login"> Sign In</button>
         </form>
       </div>
 
