feat: :art: adding css and js

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign In - F1Force</title>
-  <link href="./storage/img/fav-icon-signup.svg" rel="icon">
-  <link rel="stylesheet" href="./styles/styles.css">
+  <link href="./user-signin/storage/img/fav-icon-signup.svg" rel="icon">
+  <link rel="stylesheet" href="./user-signin/styles/styles.css">
 </head>
 <body>
   <div class="container">
@@ -34,5 +34,6 @@
 
     </div>
   </div>
+  <script src="./user-signin/scripts/script.js"></script>
 </body>
 </html>
