feat: :hammer: Fixing JS

--- a/login-admin/index.html
+++ b/login-admin/index.html
@@ -28,7 +28,7 @@
             <a href="#">Olvidé mi contraseña</a>
           </div>
 
-          <button class="login--button" id="login"> Sign In</button>
+          <button class="login--button" id="login"> <a href="../user-mainPage/index.html">Sign In</a></button>
         </form>
       </div>
 
