--- a/avatar-admin/index.html
+++ b/avatar-admin/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style2.css" />
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/alertify.min.css"/>
+
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/themes/default.min.css"/>
   
    
 </head>
@@ -27,11 +30,9 @@
     
       <button class="button1" id="btnCrear" >Crear</button>
       <button class="button2" >Editar</button>
-      <button class="button3" >Eliminar</button>
+      <button class="btnBorrar"  >Eliminar</button>
 
-      <!-- Botones -->
 
-<!-- Modal personalizado sin Bootstrap -->
 <div id="modalArticulo">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -83,6 +84,7 @@
 </body>
 <script src="./js/crear.js"></script>
 <script src="./js/Mostrar.js"></script>
+<script src="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/alertify.min.js"></script>
 
 </html>
 
