--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
             <a href="#">Olvidé mi contraseña</a>
           </div>
 
-          <button class="login--button" id="login"> Sign In</button>
+          <button class="login--button" id="login"> <a href="./user-mainPage/index.html">Sign In</a></button>
         </form>
       </div>
 
     </div>
   </div>
-  <script src="./user-signin/scripts/script.js"></script>
 </body>
 </html>
