--- a/login-admin/index.html
+++ b/login-admin/index.html
@@ -27,7 +27,7 @@
             <a href="#">Olvidé mi contraseña</a>
           </div>
 
-          <button class="login--button" id="login"> <a href="../user-mainPage/index.html">Sign In</a></button>
+          <button class="login--button" id="login"> <a href="../admin-mainPage/index.html">Sign In</a></button>
         </form>
       </div>
 
