--- a/mapas-admin/index.html
+++ b/mapas-admin/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css" />
+     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/alertify.min.css"/>
+
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/css/themes/default.min.css"/>
    
 </head>
  
@@ -25,7 +29,7 @@
     
       <button class="button1" id="btnCrear" >Crear</button>
       <button class="button2" >Editar</button>
-      <button class="button3" >Eliminar</button>
+     
       <div id="modalArticulo">
   <div class="modal-dialog">
     <div class="modal-content">
@@ -76,6 +80,10 @@
 </body>
  <script src="./js/crear.js"></script>
  <script src="./js/Mostrar.js"></script>
+ <script src="//cdn.jsdelivr.net/npm/alertifyjs@1.14.0/build/alertify.min.js"></script>
+
+
+
 
 </html>
 
